Git Deployment Assignment/force-app/main/default/objects/Car_Inventory__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>The make of the car</description>
    <label>Make</label>
    <length>20</length>
    <type>Text</type>
</CustomField>