Git Deployment Assignment/force-app/main/default/objects/Car_Inventory__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>The model of the car</description>
    <label>Model</label>
    <length>10</length>
    <type>Text</type>
</CustomField>