Git Deployment Assignment/force-app/main/default/objects/Car_Inventory__c/fields/Sedan_Color__c.field-meta.xml
<CustomField>
    <fullName>Sedan_Color__c</fullName>
    <description>This field stores the color of the sedan, such as &quot;Black,&quot; 
&quot;White,&quot; or &quot;Silver.&quot;</description>
    <label>Sedan Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>