Git Deployment Assignment/force-app/main/default/objects/Car_Inventory__c/fields/Sedan_Transmission_Type__c.field-meta.xml
<CustomField>
    <fullName>Sedan_Transmission_Type__c</fullName>
    <description>This field stores the type of transmission used in the sedan, such as &quot;Automatic&quot; or &quot;Manual.&quot;</description>
    <label>Sedan Transmission Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>