Git Deployment Assignment/force-app/main/default/objects/Car_Inventory__c/fields/SUV_Capacity__c.field-meta.xml
<CustomField>
    <fullName>SUV_Capacity__c</fullName>
    <description>This field stores the seating capacity of the SUV, such as &quot;5-seater&quot; or &quot;7-seater.&quot;</description>
    <label>SUV Capacity</label>
    <length>6</length>
    <type>Text</type>
</CustomField>