Git Deployment Assignment/force-app/main/default/objects/Car_Inventory__c/fields/SUV_Cargo_Space__c.field-meta.xml
<CustomField>
    <fullName>SUV_Cargo_Space__c</fullName>
    <description>- The cargo space of the SUV (e.g., &quot;30 cubic feet,&quot; &quot;50 cubic feet&quot;).</description>
    <label>SUV Cargo Space</label>
    <length>7</length>
    <type>Text</type>
</CustomField>