Git Deployment Assignment/force-app/main/default/objects/Car_Inventory__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>The Vehicle Identification Number of the car</description>
    <label>VIN</label>
    <length>13</length>
    <type>Text</type>
</CustomField>