Git Deployment Assignment/force-app/main/default/objects/Car_Inventory__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>The year of the car</description>
    <label>Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>